[tool.poetry]
name = "gpt-spec-crawler"
version = "0.1.0"
description = "Crawls the OpenAI models page and extracts specifications for each model."
authors = ["sunghj1118 <sunghj1118@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
beautifulsoup4 = "4.12.3"
pandas = "2.2.2"
selenium = "4.0.0"
webdriver-manager = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"